<resources>
    <string name="app_name">Daily Tweets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="image_tweets">Image Tweets</string>
    <string name="text_tweets">Text Tweets</string>
    <string name="video_tweets">Video Tweets(Beta)</string>
    <string name="open_twitter">Open Twitter</string>
    <string name="rate_app">Rate App</string>
    <string name="more_apps">More Apps</string>
    <string name="about">About</string>
    <string name="developers">Developers</string>
    <string name="categoryAmazing">Amazing Tweets</string>
    <string name="amazingone">Those who have courage and faith shall never perish in misery.</string>
    <string name="amazingtwo">I\'m the living embodiment of \'it could be worse\'.</string>
    <string name="amazingthree">Sometimes I get so caught up in my own problems that I forget how amazing the world is.</string>
    <string name="amazingfour">What you see is kinda what you get with me. I\'m a very real person, or I hope to be, anyway. I don\'t have nothing to hide.</string>
    <string name="amazingfive">The best thing about being who you really are is that you simply cannot fail! Be you, be awesome and live awesomely.</string>
    <string name="amazingsix">Awesome people do awesome things awesomely. So step up connect, share the love, stay positive and be Amazingly Awesome.</string>
    <string name="amazingseven">If you want to be Awesome, you have to kick all the negative and boring people out of your life and arm yourself with awesomeness imbued with positivity, creativity and little bit of craziness.</string>
    <string name="amazingeight">Be strong when you are weak. Be brave when you are scared. Be humble when you are victorious. Be badass everyday.</string>
    <string name="amazingnine">It’s the imperfections that make things beautiful.</string>
    <string name="amazingten">It doesn’t matter if you’ve failed or if you’ve been beaten. All that matters is that you learn something, get back up, and try again. Because winning is a good feeling, but winning when nobody else thought you could is an awesome feeling.</string>
    <string name="categoryCreative">Creativity Tweets</string>
    <string name="creativeone">The desire to create is one of the deepest yearnings of the human soul.</string>
    <string name="creativetwo">Creativity doesn\'t wait for that perfect moment. It fashions its own perfect moments out of ordinary ones.</string>
    <string name="creativethree">You can\'t use up creativity. The more you use the more you have.</string>
    <string name="creativefour">To practice any art, no matter how well or badly, is a way to make your soul grow. So do it.</string>
    <string name="creativefive">Creativity is inventing, experimenting, growing, taking risks, breaking rules, making mistakes, and having fun.</string>
    <string name="creativesix">Creativity involves breaking out of expected patterns in order to look at things in a different way.</string>
    <string name="creativeseven">We have to continually be jumping off cliffs and developing our wings on the way down.</string>
    <string name="creativeeight">Great minds discuss ideas. Average minds discuss events. Small minds discuss people.</string>
    <string name="creativenine">Imagination is everything. It is the preview of life\'s coming attractions.</string>
    <string name="creativeten">Around here, however, we don\'t look backwards for very long. We keep moving forward, opening up new doors and doing new things, because we\'re curious…and curiosity keeps leading us down new paths.</string>
    <string name="categoryCrush">Crush Tweets</string>
    <string name="crushone">You see in all my life I’ve never found what I couldn’t resist, what I couldn’t turn down. I could walk away from anyone I ever knew, but I can’t walk away from you.</string>
    <string name="crushtwo">You don’t have to be a genius to figure what’s between us.</string>
    <string name="crushthree">The spaces between your fingers are meant to be filled with mine.</string>
    <string name="crushfour">I’ll be yours forever, just tell me when to start.</string>
    <string name="crushfive">It’s amazing how crazy I feel when my phone vibrates and I’m, begging it to be you.</string>
    <string name="crushsix">Even after most said it was over between you and me, I still to this day, never shut up about you. You’ve got me wrapped around your finger.</string>
    <string name="crushseven">If I got a penny for every time I thought and dreamed about you, I would be rich.</string>
    <string name="crusheight">You know that feeling when your head says no, but your heart says yes? It’s wrong, but it feels so right? I wish we could be together.</string>
    <string name="crushnine">Ever since I met you, it hasn’t been the same. All you’ve got me doing is drawing hearts around your name.</string>
    <string name="crushten">Some things have to remain a secret, but you and I don’t.</string>
    <string name="categoryEmotional">Emotional Tweets</string>
    <string name="emotionalone">Loyalty is when love is stronger than passion.</string>
    <string name="emotionaltwo">One word frees us of all the weight and pain in life. That word is love!</string>
    <string name="emotionalthree">To love deeply in one direction makes us more loving in all others.</string>
    <string name="emotionalfour">When we are in love we seem to ourselves quite different from what we were before.</string>
    <string name="emotionalfive">Love takes off masks that we fear we cannot live without and know we cannot live within..</string>
    <string name="emotionalsix">Above all, be the heroine of your life. Not the victim.</string>
    <string name="emotionalseven">You never really know the true quality of someone’s character until the road gets rocky.</string>
    <string name="emotionaleight">We come to love not by finding a perfect person, but by learning to see an imperfect person perfectly.</string>
    <string name="emotionalnine">Love deeply and passionately. You might get hurt, but it’s the only way to love life completely.</string>
    <string name="emotionalten">Sometimes no matter how much you try to speak your heart out, words are not just enough to describe how you truly feel.</string>
    <string name="categoryFamousLyrics">Famous Lyrics Tweets</string>
    <string name="lyricsone">“Emancipate yourselves from mental slavery.
None but ourselves can free our minds.”
― Bob Marley.</string>
    <string name="lyricstwo">“The story of life is quicker than the wink of an eye, the story of love is hello and goodbye…until we meet again”
― Jimi Hendrix.</string>
    <string name="lyricsthree">“Would you destroy Something perfect in order to make it beautiful?”
― Gerard Way.</string>
    <string name="lyricsfour">“Get up, stand up, Stand up for your rights. Get up, stand up, Don\'t give up the fight.”
― Bob Marley.</string>
    <string name="lyricsfive">“We all shine on…like the moon and the stars and the sun…we all shine on…come on and on and on…”
― john lennon.</string>
    <string name="lyricssix">“I get by with a little help from my friends.”
― John Lennon.</string>
    <string name="lyricsseven">
“When pain brings you down, don\'t be silly, don\'t close your eyes and cry, you just might be in the best position to see the sun shine.”
― Alanis Morissette.</string>
    <string name="lyricseight">
“Excuse me while I kiss the sky.”
― Jimi Hendrix.</string>
    <string name="lyricsnine">“Remember to let her into your heart.”
― John Lennon.</string>
    <string name="lyricsten">“I\'d trade all my tomorrows for one single yesterday.”
― Kris Kristofferson.</string>
    <string name="categoryFamousQuotes">Famous Quotes Tweets</string>
    <string name="famousquotesone">"The greatest glory in living lies not in never falling, but in rising every time we fall." -Nelson Mandela</string>
    <string name="famousquotestwo">"The way to get started is to quit talking and begin doing." -Walt Disney</string>
    <string name="famousquotesthree">"Your time is limited, so don't waste it living someone else's life. Don't be trapped by dogma – which is living with the results of other people's thinking." -Steve Jobs</string>
    <string name="famousquotesfour">"If life were predictable it would cease to be life, and be without flavor." -Eleanor Roosevelt</string>
    <string name="famousquotesfive">"If you set your goals ridiculously high and it's a failure, you will fail above everyone else's success." -James Cameron</string>
    <string name="famousquotessix">"Spread love everywhere you go. Let no one ever come to you without leaving happier." -Mother Teresa</string>
    <string name="famousquotesseven">"Don't judge each day by the harvest you reap but by the seeds that you plant." -Robert Louis Stevenson</string>
    <string name="famousquoteseight">"When you reach the end of your rope, tie a knot in it and hang on." -Franklin D. Roosevelt</string>
    <string name="famousquotesnine">"Tell me and I forget. Teach me and I remember. Involve me and I learn." -Benjamin Franklin</string>
    <string name="famousquotesten">"The best and most beautiful things in the world cannot be seen or even touched - they must be felt with the heart." -Helen Keller</string>
    <string name="categoryFriendship">Friendship Tweets</string>
    <string name="friendshipone">“Friendship is the hardest thing in the world to explain. It’s not something you learn in school. But if you haven’t learned the meaning of friendship, you really haven’t learned anything.</string>
    <string name="friendshiptwo">Don’t make friends who are comfortable to be with. Make friends who will force you to lever yourself up.</string>
    <string name="friendshipthree">The most beautiful discovery true friends make is that they can grow separately without growing apart.</string>
    <string name="friendshipfour">Each friend represents a world in us, a world possibly not born until they arrive, and it is only by this meeting that a new world is born</string>
    <string name="friendshipfive">Life is partly what we make it, and partly what it is made by the friends we choose.</string>
    <string name="friendshipsix">Find a group of people who challenge and inspire you; spend a lot of time with them, and it will change your life.</string>
    <string name="friendshipseven">Few things have such a huge impact on happiness and the enjoyment, depth and plain fun of life as the friendships we have.</string>
    <string name="friendshipeiiht">A friend is one who overlooks your broken fence and admires the flowers in your garden</string>
    <string name="friendshipnine">You can make more friends in two months by becoming interested in other people than you can in two years by trying to get other people interested in you.</string>
    <string name="friendshipten">Time doesn’t take away from friendship, nor does separation.</string>
    <string name="categoryFunny">Funny Tweets</string>
    <string name="funnyone">I’m sick of following my dreams, man. I’m just going to ask where they’re going and hook up with ’em later.</string>
    <string name="_2020">2020</string>
    <string name="bultech">BULTECH</string>
    <string name="dev_details">Bultech strives to create quality apps for a quality audience. We are grateful for your support and please be sure to check out more of our apps by clicking on the menu and clicking on more apps.Reach us at Bultechbusiness@gmail.com for more information</string>
</resources>