<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group
        android:id="@+id/partOne"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_text"
            android:title="@string/text_tweets" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_images"
            android:title="@string/image_tweets" />

    </group>
    <group
        android:id="@+id/partTwo"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_developer"
            android:icon="@drawable/ic_action_developers"
            android:title="@string/developers" />

    </group>

</menu>