<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DeveloperFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imagedev"
                android:layout_marginTop="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_width="360dp"
                android:layout_height="200dp"
                android:src="@drawable/bultech"/>

            <TextView
                android:id="@+id/details"
                android:layout_marginTop="50dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:text="@string/dev_details"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/imagedev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/nameabout"
                android:layout_marginTop="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:text="@string/bultech"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView

                android:layout_marginTop="15dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:text="@string/_2020"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/nameabout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>